# mental-health-bar-rs

./: .eslintignore  .gitignore  .lintstagedrc.json  .prettierignore  .prettierrc  CLAUDE.md  README.md  REPOSITORY-BEST-PRACTICES.md  TEST_COVERAGE_ANALYSIS.md  catalyst-css-extraction-guide.md  duckdb-cascading-delete.md  eslint.config.js  new-features.md  package-lock.json  package.json  playwright.config.ts  pr-body-week1-activity-logs.md  pr-body-week1-logs.md  pr-body.md  pr-comment.md  react-vs-svelte-decision.md  rust-best-practices.md  sqllite-links.md  sqllite-topics.md  svelte-best-practices.md  tailwind.config.js  vitest.config.ts  vitest.setup.ts
src-tauri/: Cargo.toml  TESTING.md  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/benches/: activity_groups_benchmarks.rs  activity_logs_benchmarks.rs  reporting_benchmarks.rs
src-tauri/capabilities/: default.json
src-tauri/docs/: DATA_MANAGEMENT.md  duckdb-practices.md
src-tauri/src/: constants.rs  errors.rs  lib.rs  main.rs  utils.rs
src-tauri/src/config/: mod.rs
src-tauri/src/db/: migrations.rs  mod.rs  query_builder.rs
src-tauri/src/db/migrations/: 001_initial_schema.sql  002_add_schedule_index.sql  003_activity_groups.sql  003_activity_groups_rollback.sql  004_mood_scale_1_to_7.sql  005_assessment_status.sql  006_draft_unique_constraint.sql  007_history_query_index.sql
src-tauri/src/features/: mod.rs
src-tauri/src/features/activities/: commands.rs  mod.rs  models.rs  queries.rs  repository.rs
src-tauri/src/features/assessments/: commands.rs  content.rs  mod.rs  models.rs  queries.rs  repository.rs  repository_trait.rs
src-tauri/src/features/mood/: commands.rs  mod.rs  models.rs  (+3 more)
src-tauri/src/types/: activity.rs  assessment.rs  mod.rs  mood.rs
src-tauri/tests/: repository_integration.rs  test_activities.rs  test_activity_groups.rs  test_activity_groups_integration.rs  test_assessments.rs  test_database.rs  test_mockall_example.rs  test_mood.rs  test_performance.rs  test_property_based.rs  test_scheduling.rs  test_visualization.rs
(+257 files in other folders)
