[package]
name = "tauri-sveltekit-modern"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_sveltekit_modern_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tauri-specta = { version = "2.0.0-rc.20", features = ["typescript"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-specta = { version = "2.0.0-rc.20", features = ["typescript"] }
specta = { version = "2.0.0-rc.20" }
specta-typescript = "0.0.7"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
confy = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
validator = { version = "0.18", features = ["derive"] }
libc = "0.2.177"

[dev-dependencies]
tempfile = "3.8"
quickcheck = "1.0"
mockall = "0.13"

# Compilation speed optimizations
[profile.dev]
opt-level = 0
debug = 1  # Reduced debug info for faster builds
incremental = true
codegen-units = 16  # Balanced: faster compile time with better runtime performance than default 256

# Don't generate debug info for dependencies (huge speedup)
[profile.dev.package."*"]
opt-level = 0
debug = 0

# Test profile inherits from dev with minimal changes
[profile.test]
inherits = "dev"
debug = 1
